<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Richard Ricciardelli
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/default_limit"
        android:inputType="number"
        android:key="@string/preference_limit_key"
        android:summary="@string/preference_limit_summary"
        android:title="@string/preference_limit_title" />

    <EditTextPreference
        android:defaultValue="@string/default_lines"
        android:inputType="number"
        android:key="@string/preference_lines_key"
        android:summary="@string/preference_lines_summary"
        android:title="@string/preference_lines_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/preference_autoupdate_key"
        android:summary="@string/preference_autoupdate_summary"
        android:title="@string/preference_autoupdate_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/preference_animation_key"
        android:summary="@string/preference_animation_summary"
        android:title="@string/preference_animation_title" />
</PreferenceScreen>
